--- a/sameer/package.json
+++ b/sameer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sameer",
 	"displayName": "sameer",
-	"description": "common utils i use with vscode",
+	"description": "vscode utilities i use",
 	"version": "0.0.1",
 	"engines": {
 		"vscode": "^1.61.0"
@@ -10,42 +10,31 @@
 		"Other"
 	],
 	"activationEvents": [
-        "onCommand:sameer.helloWorld"
+        "onCommand:sameer.doMath"
 	],
-	"main": "./dist/extension.js",
+	"main": "./extension.js",
 	"contributes": {
-		"commands": [
-			{
-				"command": "sameer.helloWorld",
-				"title": "Hello World"
-			}
-		]
+		"commands": [{
+            "command": "sameer.doMath",
+            "title": "Hello World"
+
+		}]
 	},
 	"scripts": {
-		"vscode:prepublish": "yarn run package",
-		"compile": "webpack",
-		"watch": "webpack --watch",
-		"package": "webpack --mode production --devtool hidden-source-map",
-		"compile-tests": "tsc -p . --outDir out",
-		"watch-tests": "tsc -p -w . --outDir out",
-		"pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
-		"lint": "eslint src --ext ts",
-		"test": "node ./out/test/runTest.js"
+		"lint": "eslint .",
+		"pretest": "yarn run lint",
+		"test": "node ./test/runTest.js"
 	},
 	"devDependencies": {
-		"@types/vscode": "^1.61.0",
-		"@types/glob": "^7.1.4",
-		"@types/mocha": "^9.0.0",
-		"@types/node": "14.17.27",
-		"@typescript-eslint/eslint-plugin": "^5.1.0",
-		"@typescript-eslint/parser": "^5.1.0",
-		"eslint": "^8.1.0",
-		"glob": "^7.1.7",
-		"mocha": "^9.1.3",
-		"typescript": "^4.4.4",
-		"ts-loader": "^9.2.5",
-		"webpack": "^5.52.1",
-		"webpack-cli": "^4.8.0",
-		"@vscode/test-electron": "^1.6.2"
-	}
+        "@types/vscode": "^1.61.0",
+        "@types/glob": "^7.1.4",
+        "@types/mocha": "^9.0.0",
+        "@types/node": "14.17.27",
+        "eslint": "^8.1.0",
+        "glob": "^7.1.7",
+        "mocha": "^9.1.3",
+        "typescript": "^4.4.4",
+        "@vscode/test-electron": "^1.6.2"
+    }
+
 }
