--- a/sameer/.vscodeignore
+++ b/sameer/.vscodeignore
@@ -3,7 +3,11 @@
 test/**
 .gitignore
 .yarnrc
+.yarn-lock
 vsc-extension-quickstart.md
 **/jsconfig.json
 **/*.map
 **/.eslintrc.json
+**/node_modules
+**/src
+**/dist-vsix
