--- a/sameer/package.json
+++ b/sameer/package.json
@@ -1,40 +1,113 @@
 {
-  "name": "sameer",
-	"displayName": "sameer",
-	"description": "vscode utilities i use",
-	"version": "0.0.1",
-	"engines": {
-		"vscode": "^1.61.0"
-	},
-	"categories": [
-		"Other"
-	],
-	"activationEvents": [
-        "onCommand:sameer.doMath"
-	],
-	"main": "./extension.js",
-	"contributes": {
-		"commands": [{
-            "command": "sameer.doMath",
-            "title": "Hello World"
-
-		}]
-	},
-	"scripts": {
-		"lint": "eslint .",
-		"pretest": "yarn run lint",
-		"test": "node ./test/runTest.js"
-	},
-	"devDependencies": {
-        "@types/vscode": "^1.61.0",
+    "name": "sameer",
+    "displayName": "sameer",
+    "description": "vscode utilities i use",
+    "version": "1.0.51",
+    "publisher": "sameer",
+    "repository": "https://github.com/sameerveda/vscode-plugin",
+    "engines": {
+        "vscode": "^1.61.0"
+    },
+    "categories": [
+        "Other"
+    ],
+    "activationEvents": [
+        "onCommand:sameer.eval",
+        "onCommand:sameer.doMath",
+        "onCommand:sameer.doMath.selected",
+        "onCommand:sameer.angular.sort_attrs",
+        "onCommand:sameer.sort_lines",
+        "onCommand:sameer.create_index_file",
+        "onCommand:sameer.minify",
+        "onCommand:sameer.to_hsl"
+    ],
+    "main": "./dist/extension.min.js",
+    "contributes": {
+        "commands": [
+            {
+                "command": "sameer.to_hsl",
+                "title": "Sameer: Convert hex to hsl"
+            },
+            {
+                "command": "sameer.doMath",
+                "title": "Sameer: Do Math - Evaluate All Math Expression In Current File"
+            },
+            {
+                "command": "sameer.sort_lines",
+                "title": "Sameer: Sort Lines"
+            },
+            {
+                "command": "sameer.angular.sort_attrs",
+                "title": "Sameer: Angular - Sort Html Attrs"
+            },
+            {
+                "command": "sameer.doMath.selected",
+                "title": "Sameer: Do Math - Evaluate Selected Math Expression"
+            },
+            {
+                "command": "sameer.eval",
+                "title": "Sameer: eval: Apply javascript eval function"
+            },
+            {
+                "command": "sameer.create_index_file",
+                "title": "Sameer: Create index.js/ts file for selected dir"
+            },
+            {
+                "command": "sameer.minify",
+                "title": "Sameer: Minify"
+            }
+        ],
+        "menus": {
+            "explorer/context": [
+                {
+                    "command": "sameer.create_index_file",
+                    "group": "Sameer",
+                    "when": "activeViewlet == 'workbench.view.explorer'"
+                },
+                {
+                    "command": "sameer.minify",
+                    "group": "Sameer",
+                    "when": "activeViewlet == 'workbench.view.explorer'"
+                }
+            ]
+        },
+        "configuration": {
+            "title": "Sameer: Do Math",
+            "properties": {
+                "sameer.doMath.include_comment": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "keep the evaluated string as comment"
+                }
+            }
+        }
+    },
+    "scripts": {
+        "lint": "eslint .",
+        "pretest": "yarn run lint",
+        "test": "node ./test/runTest.js",
+        "build": "esbuild src/extension.js --bundle --minify --external:vscode --format=cjs --platform=node --sourcemap --outfile=dist/extension.min.js",
+        "package": "yarn auto-version --patch && yarn build && yarn vsce package --out dist-vsix/sameer.vsix",
+        "package:install": "yarn package && code --uninstall-extension sameer.sameer && code --install-extension dist-vsix/sameer.vsix"
+    },
+    "devDependencies": {
         "@types/glob": "^7.1.4",
         "@types/mocha": "^9.0.0",
         "@types/node": "14.17.27",
+        "@types/vscode": "^1.61.0",
+        "@vscode/test-electron": "^1.6.2",
+        "auto-version-js": "^0.3.9",
         "eslint": "^8.1.0",
         "glob": "^7.1.7",
         "mocha": "^9.1.3",
         "typescript": "^4.4.4",
-        "@vscode/test-electron": "^1.6.2"
+        "vsce": "^2.5.0"
+    },
+    "dependencies": {
+        "esbuild": "^0.13.12",
+        "hex-to-hsl": "^1.0.2",
+        "lodash": "^4.17.21",
+        "mathjs": "^9.5.1",
+        "terser": "^5.10.0"
     }
-
 }
