--- a/sam-common-pack/package.json
+++ b/sam-common-pack/package.json
@@ -2,15 +2,15 @@
   "name": "sam-common-pack",
   "displayName": "Sam: Common Dev Pack",
   "description": "list of extensions i generally use",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "publisher": "sameer",
   "repository": "https://github.com/sameerveda/vscode-plugin",
   "engines": {
     "vscode": "^1.63.0"
   },
   "scripts": {
-    "package": "yarn vsce package --out dist-vsix/sameer-common-pack.vsix",    
-    "package:install": "yarn package && code --uninstall-extension sameer.sameer-common-pack && code --install-extension dist-vsix/sameer-common-pack.vsix"
+    "package": "yarn vsce package --out dist-vsix/sam-common-pack.vsix",    
+    "package:install": "yarn package && code --uninstall-extension sameer.sam-common-pack && code --install-extension dist-vsix/sam-common-pack.vsix"
   },
   "categories": [
     "Extension Packs"
