--- a/sameer/package.json
+++ b/sameer/package.json
@@ -2,7 +2,7 @@
     "name": "sameer",
     "displayName": "sameer",
     "description": "vscode utilities i use",
-    "version": "1.0.90",
+    "version": "1.0.110",
     "publisher": "sameer",
     "repository": "https://github.com/sameerveda/vscode-plugin",
     "engines": {
@@ -22,7 +22,26 @@
         "onCommand:sameer.minify",
         "onCommand:sameer.show_config",
         "onCommand:sameer.json_to_ts",
-        "onCommand:sam.utils.run_dynamic"
+        "onCommand:sam.utils.run_dynamic",
+        "onCommand:sam.lodash.camelCase",
+        "onCommand:sam.lodash.capitalize",
+        "onCommand:sam.lodash.deburr",
+        "onCommand:sam.lodash.escape",
+        "onCommand:sam.lodash.unescape",
+        "onCommand:sam.lodash.escapeRegExp",
+        "onCommand:sam.lodash.kebabCase",
+        "onCommand:sam.lodash.lowerCase",
+        "onCommand:sam.lodash.lowerFirst",
+        "onCommand:sam.lodash.upperFirst",
+        "onCommand:sam.lodash.parseInt",
+        "onCommand:sam.lodash.repeat",
+        "onCommand:sam.lodash.snakeCase",
+        "onCommand:sam.lodash.split",
+        "onCommand:sam.lodash.startCase",
+        "onCommand:sam.lodash.trim",
+        "onCommand:sam.lodash.trimEnd",
+        "onCommand:sam.lodash.trimStart",
+        "onCommand:sam.lodash.words"
     ],
     "main": "./dist/extension.min.js",
     "contributes": {
@@ -70,6 +89,82 @@
             {
                 "command": "sam.utils.run_dynamic",
                 "title": "Sameer: Run Dynamic"
+            },
+            {
+                "command": "sam.lodash.camelCase",
+                "title": "Lodash: camelCase"
+            },
+            {
+                "command": "sam.lodash.capitalize",
+                "title": "Lodash: capitalize (Converts the first character of string to upper case and the remaining to lower case.)"
+            },
+            {
+                "command": "sam.lodash.deburr",
+                "title": "Lodash: deburr (Deburrs string by converting Latin-1 Supplement and Latin Extended-A letters to basic Latin letters and removing combining diacritical marks.)"
+            },
+            {
+                "command": "sam.lodash.escape",
+                "title": "Lodash: escape (Converts the characters \"&\", \"<\", \">\", '\"', and \"'\" in string to their corresponding HTML entities.)"
+            },
+            {
+                "command": "sam.lodash.unescape",
+                "title": "Lodash: unescape (The inverse of _.escape; this method converts the HTML entities &amp;, &lt;, &gt;, &quot;, and &#39; in string to their corresponding characters.)"
+            },
+            {
+                "command": "sam.lodash.escapeRegExp",
+                "title": "Lodash: escapeRegExp (Escapes the RegExp special characters \"^\", \"$\", \"\", \".\", \"*\", \"+\", \"?\", \"(\", \")\", \"[\", \"]\", \"{\", \"}\", and \"|\" in string.)"
+            },
+            {
+                "command": "sam.lodash.kebabCase",
+                "title": "Lodash: kebabCase"
+            },
+            {
+                "command": "sam.lodash.lowerCase",
+                "title": "Lodash: lowerCase"
+            },
+            {
+                "command": "sam.lodash.lowerFirst",
+                "title": "Lodash: lowerFirst (Converts the first character of string to lower case.)"
+            },
+            {
+                "command": "sam.lodash.upperFirst",
+                "title": "Lodash: upperFirst"
+            },
+            {
+                "command": "sam.lodash.parseInt",
+                "title": "Lodash: parseInt"
+            },
+            {
+                "command": "sam.lodash.repeat",
+                "title": "Lodash: repeat (Repeats the given string n times.)"
+            },
+            {
+                "command": "sam.lodash.snakeCase",
+                "title": "Lodash: snakeCase"
+            },
+            {
+                "command": "sam.lodash.split",
+                "title": "Lodash: split"
+            },
+            {
+                "command": "sam.lodash.startCase",
+                "title": "Lodash: startCase"
+            },
+            {
+                "command": "sam.lodash.trim",
+                "title": "Lodash: trim"
+            },
+            {
+                "command": "sam.lodash.trimEnd",
+                "title": "Lodash: trimEnd"
+            },
+            {
+                "command": "sam.lodash.trimStart",
+                "title": "Lodash: trimStart"
+            },
+            {
+                "command": "sam.lodash.words",
+                "title": "Lodash: words (Splits string into an array of its words.)"
             }
         ],
         "menus": {
@@ -103,12 +198,12 @@
     },
     "scripts": {
         "lint": "eslint .",
-        "pretest": "yarn run lint",
+        "pretest": "npm run run lint",
         "test": "node ./test/runTest.js",
         "build": "esbuild src/extension.js --bundle --minify --external:vscode --format=cjs --platform=node --sourcemap --outfile=dist/extension.min.js",
-        "package": "yarn auto-version --patch && yarn build && yarn vsce package --out dist-vsix/sameer.vsix",
-        "package:install": "yarn package && code --uninstall-extension sameer.sameer && code --install-extension dist-vsix/sameer.vsix",
-        "prod": "yarn package:install"
+        "package": "npx auto-version --patch && npm run build && npx vsce package --out dist-vsix/sameer.vsix",
+        "package:install": "npm run package && code --uninstall-extension sameer.sameer && code --install-extension dist-vsix/sameer.vsix",
+        "prod": "npm run package:install"
     },
     "devDependencies": {
         "@types/glob": "^7.1.4",
@@ -120,17 +215,22 @@
         "eslint": "^8.1.0",
         "glob": "^7.1.7",
         "kleur": "^4.1.4",
+        "lodash": "^4.17.21",
         "mocha": "^9.1.3",
         "prompts": "^2.4.2",
         "typescript": "^4.4.4",
         "vsce": "^2.5.0"
     },
     "dependencies": {
+        "csso": "^5.0.3",
         "esbuild": "^0.13.12",
         "json-to-ts": "^1.7.0",
-        "lodash": "^4.17.21",
+        "lodash-es": "^4.17.21",
         "minimatch": "^3.0.4",
         "tempfile": "^4.0.0",
         "terser": "^5.10.0"
+    },
+    "prettier": {
+        "printWidth": 120
     }
 }
