--- a/sameer/package.json
+++ b/sameer/package.json
@@ -2,7 +2,7 @@
     "name": "sameer",
     "displayName": "sameer",
     "description": "vscode utilities i use",
-    "version": "1.0.111",
+    "version": "1.0.115",
     "publisher": "sameer",
     "repository": "https://github.com/sameerveda/vscode-plugin",
     "engines": {
@@ -222,11 +222,14 @@
         "vsce": "^2.5.0"
     },
     "dependencies": {
+        "cssnano": "^5.1.13",
+        "cssnano-preset-lite": "^2.1.3",
         "csso": "^5.0.3",
         "esbuild": "^0.13.12",
         "json-to-ts": "^1.7.0",
         "lodash-es": "^4.17.21",
         "minimatch": "^3.0.4",
+        "postcss": "^8.4.16",
         "tempfile": "^4.0.0",
         "terser": "^5.10.0"
     },
