--- a/sameer/package.json
+++ b/sameer/package.json
@@ -2,7 +2,7 @@
     "name": "sameer",
     "displayName": "sameer",
     "description": "vscode utilities i use",
-    "version": "1.0.117",
+    "version": "1.0.122",
     "publisher": "sameer",
     "repository": "https://github.com/sameerveda/vscode-plugin",
     "engines": {
@@ -16,6 +16,7 @@
         "onCommand:sameer.doMath.selected",
         "onCommand:sameer.angular.sort_attrs",
         "onCommand:sameer.sort_lines",
+        "onCommand:sameer.rm_new_lines",
         "onCommand:sameer.replace-slash_1",
         "onCommand:sameer.replace-slash_2",
         "onCommand:sameer.create_index_file",
@@ -54,6 +55,10 @@
             {
                 "command": "sameer.sort_lines",
                 "title": "Sameer: Sort Lines"
+            },
+            {
+                "command": "sameer.rm_new_lines",
+                "title": "Sameer: Remove New Lines"
             },
             {
                 "command": "sameer.replace-slash_1",
@@ -225,7 +230,6 @@
         "eslint": "^8.1.0",
         "glob": "^7.1.7",
         "kleur": "^4.1.4",
-        "lodash": "^4.17.21",
         "mocha": "^9.1.3",
         "prompts": "^2.4.2",
         "typescript": "^4.4.4",
