--- a/sameer/package.json
+++ b/sameer/package.json
@@ -2,7 +2,7 @@
     "name": "sameer",
     "displayName": "sameer",
     "description": "vscode utilities i use",
-    "version": "1.0.124",
+    "version": "1.0.129",
     "publisher": "sameer",
     "repository": "https://github.com/sameerveda/vscode-plugin",
     "engines": {
@@ -87,7 +87,7 @@
             },
             {
                 "command": "sameer.create_index_file",
-                "title": "Sameer: Create index.js/ts file for selected dir"
+                "title": "Sameer: Create index/barrel file for selected dir"
             },
             {
                 "command": "sameer.minify",
@@ -235,6 +235,7 @@
         "eslint": "^8.1.0",
         "glob": "^7.1.7",
         "kleur": "^4.1.4",
+        "lodash": "^4.17.21",
         "mocha": "^9.1.3",
         "prompts": "^2.4.2",
         "typescript": "^4.4.4",
